@@ -189,7 +189,13 @@
       
       \item The code for date-times before 1902 assumed that the offset
       from GMT in 1902 was a whole number of minutes: that was not true
-      of Paris.
+      of Paris (as recorded on some platforms).
+ 
+      \item Where time zones have changed abbreviations over the years,
+      the software tries to more consistently use the current
+      abbreviation.  On some platforms where the C function
+      \code{localtime} changed the \code{tzname} variables the reported
+      abbreviation could have been that of the last time converted.
     }
   }
 }
